# CADET-Semi-Analytic

./: .gitignore  .zenodo.json  AUTHORS  AUTHORS.txt  CITATION.bib  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  THIRDPARTY.license  vcpkg.json
.github/workflows/: ci.yml
cmake/Modules/: FindEigen3.cmake  FindGMP.cmake  FindMPC.cmake  FindMPFR.cmake
doc/: interface.md
examples/: README.md  pulseInject-Dyn.h5  pulseInject-QS.h5
include/: ADMoments.hpp  AnalyticalMoments.hpp  BesselZeros.hpp  CSVReader.hpp  CaSeMaConfig.hpp.in  CadetEnumeration.hpp  CenteredMoments.hpp  CliErrorParser.hpp  CliExtrapolationParser.hpp  CliUtil.hpp  CompilerSpecific.hpp  Constants.hpp  DurbinsMethod.hpp  ErrorEstimate.hpp  Exceptions.hpp  ExpInt.hpp  ExtrapolatedDurbinsMethod.hpp  Extrapolation.hpp  ExtrapolationHelpers.hpp  GRMLaplaceSolution.hpp  IOException.hpp  LRMLaplaceSolution.hpp  LRMPoreLaplaceSolution.hpp  LaplaceError.hpp  LaplaceInlet.hpp  LaplaceSolution.hpp  MPAD.hpp  MPComplex.hpp  MPComplexEigen.hpp  MPReal.hpp  ModelData.hpp  ModelDataChecker.hpp  ModelReader.hpp  ModelReaderHelper.hpp  Sequence.hpp  StringUtil.hpp  TclapCustomOutput.hpp  TclapUtils.hpp  TimeReader.hpp  Timer.hpp  (+1 more)
include/hdf5/: HDF5Base.hpp  HDF5Reader.hpp  HDF5Writer.hpp
include/io/: FileIO.hpp  IOException.hpp  ParameterProvider.hpp  ParameterProviderImpl.hpp
include/xml/: XMLBase.hpp  XMLReader.hpp  XMLWriter.hpp
src/: BesselZeros.cpp  CMakeLists.txt  CSVReader.cpp  CompileTimeConfig.hpp.in  DurbinsMethod.cpp  GraphAlgos.cpp  GraphAlgos.hpp  LaplaceError.cpp  ModelBuilder.cpp  ModelBuilder.hpp  ProgressBar.cpp  ProgressBar.hpp  SlicedVector.hpp  TimeReader.cpp  VersionInfo.cpp.in  casema-cli.cpp  chrom.cpp  chromError.cpp  chromatogram.cpp  errorCalc.cpp  momentQuadrature.cpp  moments.cpp  singlePointMethodComp.cpp  singlePointSolution.cpp
src/io/: FileIO.cpp  JsonParameterProvider.hpp
src/io/hdf5/: HDF5Base.hpp  HDF5Reader.hpp  HDF5Writer.hpp
src/io/xml/: XMLBase.hpp  XMLReader.hpp  XMLWriter.hpp
src/model/: ColumnLikeModel.cpp  ColumnLikeModel.hpp  ConvectionDispersionLikeModel.cpp  ConvectionDispersionLikeModel.hpp  GeneralRateModel.cpp  GeneralRateModel.hpp  GeneralRateModel2D.cpp  GeneralRateModel2D.hpp  InletModel.cpp  InletModel.hpp  LumpedRateModelWithPores.cpp  LumpedRateModelWithPores.hpp  LumpedRateModelWithoutPores.cpp  LumpedRateModelWithoutPores.hpp  ModelSystem.cpp  ModelSystem.hpp  OutletModel.cpp  OutletModel.hpp  ParamReaderScopes.hpp  ParamReaderUtils.hpp  RadialGeneralRateModel.cpp  RadialGeneralRateModel.hpp  RadialLumpedRateModelWithPores.cpp  RadialLumpedRateModelWithPores.hpp  RadialLumpedRateModelWithoutPores.cpp  RadialLumpedRateModelWithoutPores.hpp  StirredTankModel.cpp  StirredTankModel.hpp  UnitOperation.cpp  UnitOperation.hpp
test/: BesselZeros.cpp  CMakeLists.txt  DinisExpansion.cpp  DurbinsMethod.cpp  EstimateTests.cpp  ExpInt.cpp  ExtrapolationTestFuncs.hpp  GRM2D.cpp  SystemTests.cpp  checkCenterMom.cpp  extraConsLab.cpp  extraConvLab.cpp  extraLab.cpp  fourierCoeff.cpp  fourierError.cpp  generalMomTest.cpp  inletTest.cpp  qamarAnaMomTest.cpp  qamarMomTest.cpp  scanMom.cpp  scanSol.cpp  testCSVreader.cpp  testCppAD.cpp  testErrorEstimate.cpp  testFADBAD.cpp  testInverseExpInt.cpp  testQuadrature.cpp  testRunner.cpp
